@@ -45,5 +45,4 @@ PQXX_SEEKDIRS_MATCH_C	internal	compiler
 PQXX_PQ_IN_NAMESPACE	public	compiler
 PQXX_SELECT_ACCEPTS_NULL	internal	compiler
 PQXX_TR1_HEADERS	public	compiler
-PQXXTR1	public	compiler
 VERSION	internal	autotools
